--- a/BetterGenshinImpact/View/Pages/HomePage.xaml
+++ b/BetterGenshinImpact/View/Pages/HomePage.xaml
@@ -47,7 +47,7 @@
                         <ui:TextBlock FontTypography="Title" Text="BetterGI" />
                         <ui:TextBlock FontTypography="Subtitle"
                                       Opacity="0.8"
-                                      Text="更好的原神，免费且开源" />
+                                      Text="A Better Genshin Impact, Free and Open Source" />
                         <ui:TextBlock FontTypography="BodyStrong" Opacity="0.6">
                             <Hyperlink Command="{Binding GoToWikiUrlCommand}"
                                        Foreground="#B7FFFFFF"
@@ -79,7 +79,7 @@
                     <ui:TextBlock Grid.Row="0"
                                   Grid.Column="0"
                                   FontTypography="Body"
-                                  Text="BetterGI · 更好的原神，启动！"
+                                  Text="BetterGI · A Better Genshin Impact，Launch！"
                                   TextWrapping="Wrap" />
                     <ui:TextBlock Grid.Row="1"
                                   Grid.Column="0"
@@ -95,11 +95,11 @@
                                 Margin="0,0,24,0"
                                 Orientation="Horizontal">
                         <ui:Button Command="{Binding StartTriggerCommand}"
-                                   Content="启动"
+                                   Content="Start"
                                    Icon="{ui:SymbolIcon Play24}"
                                    Visibility="{Binding StartButtonVisibility}" />
                         <ui:Button Command="{Binding StopTriggerCommand}"
-                                   Content="停止"
+                                   Content="Stop"
                                    Icon="{ui:SymbolIcon Dismiss24}"
                                    Visibility="{Binding StopButtonVisibility}" />
                     </StackPanel>
@@ -119,12 +119,12 @@
                     <ui:TextBlock Grid.Row="0"
                                   Grid.Column="0"
                                   FontTypography="Body"
-                                  Text="截图模式"
+                                  Text="OCR Mode"
                                   TextWrapping="Wrap" />
                     <ui:TextBlock Grid.Row="1"
                                   Grid.Column="0"
                                   Foreground="{ui:ThemeResource TextFillColorTertiaryBrush}"
-                                  Text="如果可用的话，推荐选择 BitBlt，问题较少"
+                                  Text="BitBlt Reccomended if available, fewer problems"
                                   TextWrapping="Wrap" />
                     <ComboBox Grid.Row="0"
                               Grid.RowSpan="2"
@@ -146,12 +146,12 @@
                     <ui:TextBlock Grid.Row="0"
                                   Grid.Column="0"
                                   FontTypography="Body"
-                                  Text="触发器间隔（毫秒）"
+                                  Text="Trigger Interval（ms）"
                                   TextWrapping="Wrap" />
                     <ui:TextBlock Grid.Row="1"
                                   Grid.Column="0"
                                   Foreground="{ui:ThemeResource TextFillColorTertiaryBrush}"
-                                  Text="默认50ms，普通用户不建议调整这个值，具体调整方式见文档"
+                                  Text="The Default is 50ms，It is not recommended for ordinary users to adjust this value. Please see the documentation for more info."
                                   TextWrapping="Wrap" />
                     <ui:TextBox Grid.Row="0"
                                 Grid.RowSpan="2"
@@ -173,19 +173,19 @@
                     <ui:TextBlock Grid.Row="0"
                                   Grid.Column="0"
                                   FontTypography="Body"
-                                  Text="测试图像捕获"
+                                  Text="Test Image Capture"
                                   TextWrapping="Wrap" />
                     <ui:TextBlock Grid.Row="1"
                                   Grid.Column="0"
                                   Foreground="{ui:ThemeResource TextFillColorTertiaryBrush}"
-                                  Text="测试功能，测试几种截图模式的效果"
+                                  Text="Test function to test the effectiveness of several screenshot modes"
                                   TextWrapping="Wrap" />
                     <ui:Button Grid.Row="0"
                                Grid.RowSpan="2"
                                Grid.Column="1"
                                Margin="0,0,36,0"
                                Command="{Binding StartCaptureTestCommand}"
-                               Content="测试图像捕获" />
+                               Content="Test Image Capture" />
                 </Grid>
                 <Separator Margin="-18,0" BorderThickness="0,1,0,0" />
                 <Grid Margin="16">
@@ -200,7 +200,7 @@
                     <ui:TextBlock Grid.Row="0"
                                   Grid.Column="0"
                                   FontTypography="Body"
-                                  Text="系统图形设置"
+                                  Text="System graphics settings"
                                   TextWrapping="Wrap" />
                     <ui:TextBlock Grid.Row="1"
                                   Grid.Column="0"
@@ -234,12 +234,12 @@
                     <ui:TextBlock Grid.Row="0"
                                   Grid.Column="0"
                                   FontTypography="Body"
-                                  Text="同时启动原神"
+                                  Text="Launch Genshin Impact at the same time"
                                   TextWrapping="Wrap" />
                     <ui:TextBlock Grid.Row="1"
                                   Grid.Column="0"
                                   Foreground="{ui:ThemeResource TextFillColorTertiaryBrush}"
-                                  Text="启动 BetterGI 时，如果原神未启动，则自动启动原神。"
+                                  Text="When starting BetterGI，If Genshin Impact is not started, it will be started automatically."
                                   TextWrapping="Wrap" />
                     <ui:ToggleSwitch Grid.Row="0"
                                      Grid.RowSpan="2"
@@ -261,7 +261,7 @@
                     <ui:TextBlock Grid.Row="0"
                                   Grid.Column="0"
                                   FontTypography="Body"
-                                  Text="原神安装位置（不支持云原神的联动启动）"
+                                  Text="Genshin Impact installation location (Genshin Impact Cloud Service not supported)"
                                   TextWrapping="Wrap" />
                     <ui:TextBlock Grid.Row="1"
                                   Grid.Column="0"
@@ -273,7 +273,7 @@
                                Grid.Column="1"
                                Margin="0,0,36,0"
                                Command="{Binding SelectInstallPathCommand}"
-                               Content="浏览" />
+                               Content="Browse" />
                 </Grid>
                 <Grid Margin="16">
                     <Grid.RowDefinitions>
@@ -287,12 +287,12 @@
                     <ui:TextBlock Grid.Row="0"
                                   Grid.Column="0"
                                   FontTypography="Body"
-                                  Text="启动参数"
+                                  Text="Launch Options"
                                   TextWrapping="Wrap" />
                     <ui:TextBlock Grid.Row="1"
                                   Grid.Column="0"
                                   Foreground="{ui:ThemeResource TextFillColorTertiaryBrush}"
-                                  Text="如果你不知道什么是启动参数请不要填写。"
+                                  Text="If you don't know what launch options are, don't touch them."
                                   TextWrapping="Wrap" />
                     <!--  常见启动参数：无边框 -popupwindow 指定分辨率 -screen-width 1920 -screen-height 1080  -->
                     <ui:TextBox Grid.Row="0"
