--- a/BetterGenshinImpact/View/Pages/MacroSettingsPage.xaml
+++ b/BetterGenshinImpact/View/Pages/MacroSettingsPage.xaml
@@ -82,18 +82,18 @@
                         Grid.Column="0"
                         FontTypography="Body"
                         TextWrapping="Wrap"
-                        Text="那维莱特 - 转圈圈" />
+                        Text="Hold to Spin (Neuvilette)" />
                     <ui:TextBlock
                         Grid.Row="1"
                         Grid.Column="0"
                         Foreground="{ui:ThemeResource TextFillColorTertiaryBrush}"
                         TextWrapping="Wrap"
-                        Text="快速水平平移鼠标，需要配置快捷键进行触发" />
+                        Text="Quickly moves the mouse horizontally, you need to configure a hotkey to use." />
                 </Grid>
             </ui:CardControl.Header>
             <ui:Button
                 Margin="0,0,36,0" 
-                Content="绑定快捷键" 
+                Content="Bind Hotkey" 
                 Command="{Binding GoToHotKeyPageCommand}"/>
         </ui:CardControl>
 
@@ -189,7 +189,7 @@
             </ui:CardControl.Header>
             <ui:Button
                 Margin="0,0,36,0" 
-                Content="绑定快捷键" 
+                Content="Bind Hotkey" 
                 Command="{Binding GoToHotKeyPageCommand}"/>
         </ui:CardControl>
 
