--- a/BetterGenshinImpact/View/Pages/MacroSettingsPage.xaml
+++ b/BetterGenshinImpact/View/Pages/MacroSettingsPage.xaml
@@ -18,7 +18,7 @@
         <ui:TextBlock
             Margin="0,0,0,8"
             FontTypography="BodyStrong"
-            Text="辅助操控设置" />
+            Text="Macro Settings" />
         <ui:CardControl Margin="0,0,0,12" Icon="{ui:SymbolIcon Keyboard24}">
             <ui:CardControl.Header>
                 <Grid>
@@ -31,13 +31,13 @@
                         Grid.Column="0"
                         FontTypography="Body"
                         TextWrapping="Wrap"
-                        Text="长按空格等于连续按下空格" />
+                        Text="Holding Spacebar behaves like repeatedly clicking Spacebar" />
                     <ui:TextBlock
                         Grid.Row="1"
                         Grid.Column="0"
                         Foreground="{ui:ThemeResource TextFillColorTertiaryBrush}"
                         TextWrapping="Wrap"
-                        Text="轻松解除冻结，由于在水下存在长按的空格的场景，所以不推荐启用" />
+                        Text="Unfreeze easily, not reccomended underwater due to it sometimes requiring holding Spacebar" />
                 </Grid>
             </ui:CardControl.Header>
             <ui:ToggleSwitch
@@ -56,13 +56,13 @@
                         Grid.Column="0"
                         FontTypography="Body"
                         TextWrapping="Wrap"
-                        Text="长按 F 等于连续按下 F " />
+                        Text="Holding F behaves like repeatedly clicking F" />
                     <ui:TextBlock
                         Grid.Row="1"
                         Grid.Column="0"
                         Foreground="{ui:ThemeResource TextFillColorTertiaryBrush}"
                         TextWrapping="Wrap"
-                        Text="快速拾取大量掉落物，有自动拾取的功能下，就显得比较鸡肋了" />
+                        Text="Quickly pickup a large quantity of drops. With the auto pickup function becomes not useful" />
                 </Grid>
             </ui:CardControl.Header>
             <ui:ToggleSwitch
@@ -114,19 +114,19 @@
                         Grid.Column="0"
                         FontTypography="Body"
                         TextWrapping="Wrap"
-                        Text="快速强化圣遗物" />
+                        Text="Quickly Enhance Artifact" />
                     <ui:TextBlock
                         Grid.Row="1"
                         Grid.Column="0"
                         Foreground="{ui:ThemeResource TextFillColorTertiaryBrush}"
                         TextWrapping="Wrap"
-                        Text="快速跳过强化结果展示，需要配置快捷键进行触发（请不要长按）" />
+                        Text="Quickly skips Enhance Artifact result animation, you need to bind a hotkey to activate (Dont hold)" />
                     <ui:Button
                         Grid.Row="0"
                         Grid.RowSpan="2"
                         Grid.Column="1"
                         Margin="0,0,24,0"
-                        Content="绑定快捷键"
+                        Content="Bind Hotkey"
                         Command="{Binding GoToHotKeyPageCommand}"/>
                 </Grid>
             </ui:CardExpander.Header>
@@ -145,13 +145,13 @@
                         Grid.Column="0"
                         FontTypography="Body"
                         TextWrapping="Wrap"
-                        Text="强化的额外等待时间（毫秒）" />
+                        Text="Enhancment Delay (ms)" />
                     <ui:TextBlock
                         Grid.Row="1"
                         Grid.Column="0"
                         Foreground="{ui:ThemeResource TextFillColorTertiaryBrush}"
                         TextWrapping="Wrap"
-                        Text="高延迟下无法跳过强化结果显示时，需要延长这个时间配置" />
+                        Text="When the enhanced results animation appears too slow to be skipped, this delay needs to be extended" />
                     <ui:NumberBox
                         Grid.Row="0"
                         Grid.RowSpan="2"
@@ -178,13 +178,13 @@
                         Grid.Column="0"
                         FontTypography="Body"
                         TextWrapping="Wrap"
-                        Text="一键购买（请不要长按）" />
+                        Text="一Quick Buy (Dont hold）" />
                     <ui:TextBlock
                         Grid.Row="1"
                         Grid.Column="0"
                         Foreground="{ui:ThemeResource TextFillColorTertiaryBrush}"
                         TextWrapping="Wrap"
-                        Text="在物品购买/兑换页使用，从选中物品处开始，想要买几次就点按多少次" />
+                        Text="Use it with the shop menu open. Starting from selected item, click as many times as items you want to buy" />
                 </Grid>
             </ui:CardControl.Header>
             <ui:Button
